choose-native-plants/Ingress/choose-native-plants.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: '20'
    nginx.ingress.kubernetes.io/limit-rps: '20'
  labels:
    app.kubernetes.io/instance: choose-native-plants
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: choose-native-plants
    app.kubernetes.io/version: 2.2.8
    helm.sh/chart: choose-native-plants-2.0.8
  name: choose-native-plants
  namespace: choose-native-plants
spec:
  rules:
    - host: choose-native-plants.live.k8s.phl.io
      http:
        paths:
          - backend:
              service:
                name: choose-native-plants
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: choosenativeplants.com
      http:
        paths:
          - backend:
              service:
                name: choose-native-plants
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.choosenativeplants.com
      http:
        paths:
          - backend:
              service:
                name: choose-native-plants
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - choose-native-plants.live.k8s.phl.io
      secretName: choose-native-plants-tls
    - hosts:
        - choosenativeplants.com
        - www.choosenativeplants.com
      secretName: choose-native-plants-live-tls
